Fix layout on firefox

--- a/ylio/static/css/ylio.css
+++ b/ylio/static/css/ylio.css
@@ -1,12 +1,12 @@
+html, body, .container {
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     color: #434343;
-}
-
-.container {
-    height: 100%;
 }
 
 form {
